--- a/public_html/views/index.ejs
+++ b/public_html/views/index.ejs
@@ -53,6 +53,23 @@
           </div>
 
           <div class="container">
+               <div class="row index-list">
+                    <div class="col-sm-6">
+                         <h3><span class="glyphicon glyphicon-align-justify"></span> 공지사항</h3>
+                         <hr>
+                         <div class="index-notice">
+                              <ul>
+                                   <li><span class="glyphicon glyphicon-pushpin"></span>새로오신 분들은 읽어주세요.</li>
+                                   <li><span class="glyphicon glyphicon-pushpin"></span>'음악의 대명사' 홈페이지 개설</li>
+                              </ul>
+                         </div>
+                    </div>
+                    <div class="col-sm-6">
+                         <h3><span class="glyphicon glyphicon-facetime-video"></span> 금주의 영상</h3>
+                         <hr>
+                         <img src="http://placehold.it/560x350" class="img-thumbnail" alt="">
+                    </div>
+               </div>
                <div class="row">
                     <div class="col-sm-12">
                          <h1>INDEX</h1>
