--- a/public_html/views/mentor.ejs
+++ b/public_html/views/mentor.ejs
@@ -22,21 +22,23 @@
 <% include _menu %>
           <div class="container">
                <div class="row">
-                    <h2 style="border-left: 5px solid skyblue; padding-left: 5px;">멘토 게시판</h2>
-                    <p>궁금하거나 더 알고 싶은 것들을 다른 사람에게 물어보세요!</p>
+                    <h2 style="border-left: 5px solid <%= boardInfo.color %>; padding-left: 5px;"><%= boardInfo.name %></h2>
+                    <p><%= boardInfo.desc %></p>
 
                     <hr>
 
-                    <div class="mentor-article">
-
+                    <div class="col-sm-12 mentor-article">
                          <div class="row mentor-question">
                               <div class="col-sm-8">
                                    <div class="media">
                                         <div class="media-left">
-                                             <img class="img-circle" src="http://placehold.it/120x96" alt="">
+                                             <img class="img-circle" src="http://placehold.it/60x60" alt="">
                                         </div>
                                         <div class="media-body">
-                                             <p>클래식 기타 관리하는 법좀 알려주세요! <button type="button" class="btn btn-primary" name="button">댓글</button></p>
+                                             <p>
+                                                  클래식 기타 관리하는 법좀 알려주세요!
+                                                  <input type="button" class="btn-article-reply btn btn-primary" id="" name="" value="댓글">
+                                             </p>
                                         </div>
                                    </div>
                               </div>
@@ -47,11 +49,21 @@
                               <div class="col-sm-offset-4 col-sm-8">
                                    <div class="media">
                                         <div class="media-body">
-                                             <p>클래식 기타 관리는... <button type="button" class="btn btn-primary" name="button">댓글</button></p>
-                                             <input type="text" name="" value=""><button type="button" class="btn btn-default" name="button">등록</button>
+                                             <p>
+                                                  클래식 기타 관리는...
+                                                  <input type="button" class="btn-article-reply btn btn-primary" id="" name="" value="댓글">
+                                             </p>
+                                             <div class="row mentor-article-reply">
+                                                  <div class="col-xs-7 col-sm-10">
+                                                       <input type="text" class="form-control" name="" value="">
+                                                  </div>
+                                                  <div class="col-xs-2 col-sm-2">
+                                                       <button type="button" class="btn btn-default" name="button">등록</button>
+                                                  </div>
+                                             </div>
                                         </div>
                                         <div class="media-right">
-                                             <img class="img-circle" src="http://placehold.it/120x96" alt="">
+                                             <img class="img-circle" src="http://placehold.it/60x60" alt="">
                                         </div>
                                    </div>
                               </div>
@@ -59,16 +71,22 @@
                     </div>
 
                     <div class="mentor-bottom">
+                         <form class="row mentor-write">
+                              <div class="col-xs-9 col-sm-11">
+                                   <input type="text" class="form-control" id="mentorInpContent" name="mentorInpContent" value="" placeholder="내용을 입력하세요.">
+                              </div>
+                              <div class="col-xs-3 col-sm-1">
+                                   <a class=" btn btn-primary" href="/board/mentor/write" role="button" disabled>글쓰기</a>
+                              </div>
+
+                         </form>
+
                          <a class="btn btn-default" href="/board/mentor/list" role="button">목록</a>
-                         <div class="mentor-bottom-right">
-                              <a class="btn btn-primary" href="/board/mentor/write" role="button">글쓰기</a>
-                         </div>
 
                          <div class="mentor-search">
-                              <form name="board-search" method="get" onsubmit="Board_Search(this); return false;">
-                                   <input type="hidden" id="InpBoardBid" name="InpBoardBid" value="mentor">
-                                   <input type="text" id="InpBoardSearch" name="InpBoardSearch" value="" placeholder="제목 기준">
-                                   <input type="submit" id="btnBoardSearch" name="btnBoardSearch" class="btn btn-default" value="검색">
+                              <form class="board-search" name="board-search" action="/board/mentor/list/1" method="get" onsubmit="Board_Search(this); return false;">
+                                   <input type="text" id="search" name="search" value="" placeholder="내용 기준">
+                                   <input type="submit" class="btn btn-default" value="검색">
                               </form>
                          </div>
                          <div class="mentor-pagination">
