[JS] 글 작성할 때 제목에 텍스트가 작성되어있음에도 글쓰기나 수정이 되지 않는 점 수정

--- a/public_html/views/_modify.ejs
+++ b/public_html/views/_modify.ejs
@@ -155,7 +155,7 @@ Number.prototype.zf = function (len) { return this.toString().zf(len); };
                     var editor = CKEDITOR.instances.modifyInpContent
                       , editor_Data = editor.getData();
 
-                    if (($("#modifyInpTitle").text()).length < 1) {
+                    if (E("modifyInpTitle").value.length < 1) {
                          alert("제목을 입력해주세요!");
                          return;
                     }
@@ -174,7 +174,7 @@ Number.prototype.zf = function (len) { return this.toString().zf(len); };
                     } catch (e) {}
                }
           </script>
-          
+
 <% include _foot %>
      </body>
 </html>
